[tool.poetry]
name = "daily-leet"
version = "0.2.1"
description = ""
authors = ["madmaxieee <76544194+madmaxieee@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "daily_leet"}]

[tool.poetry.scripts]
leetcode = "daily_leet.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = { version = "^22.6.0", allow-prereleases = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
